fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   font-family: Roboto;
   overflow-x: hidden;
 }
+h4 {
+  font-weight: 100;
+  font-size: 2rem;
+}
 .header {
   width: 100vw;
   height: 120px;
@@ -49,7 +53,7 @@
 .second {
   width: 100vw;
   height: 100vh;
-  align-items: center;
+
   background-color: #f1f1f1;
 }
 .third {
@@ -61,7 +65,7 @@
 .fourth {
   width: 100vw;
   height: 100vh;
-  align-items: center;
+
   background-color: #f1f1f1;
 }
 
@@ -69,7 +73,8 @@
   font-size: 7rem;
   width: 700px;
   font-weight: 600;
-  margin-left: 62rem;
+  margin-right: 50px;
+
   padding-top: 9rem;
 }
 
@@ -77,7 +82,7 @@
   font-size: 1.5rem;
   font-weight: 300;
   width: 700px;
-  margin-left: 62rem;
+  margin-right: 50px;
   padding-top: 1rem;
 }
 .title_left {
@@ -121,9 +126,8 @@
 
 .color-container {
   width: 700px;
+  height: 200px;
   padding-top: 1rem;
-
-  margin-left: 62rem;
 }
 
 .canvas-container {
@@ -169,6 +173,9 @@
 .content-container2 {
   transform: translateY(100px);
   opacity: 0;
+
+  display: grid;
+  justify-content: right;
 }
 .content-container3 {
   transform: translateY(100px);
@@ -177,4 +184,11 @@
 .content-container4 {
   transform: translateY(100px);
   opacity: 0;
+
+  display: grid;
+  justify-content: right;
+}
+
+.color-instructions {
+  display: inline-block;
 }
